--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 </head>
 
 <body>
-
+  <div class="loader-wrapper">
+    <div class="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+  </div>
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -45,12 +49,10 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Start</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>O mnie</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Kwalifikacje</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Kontakt</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -85,10 +87,6 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Umiejętności</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -127,14 +125,16 @@
             <h3 class="resume-title">Zawodowe</h3>
             <div class="resume-item pb-0">
               <h4>Pure Drive Fine Food</h4>
+              <h5>2018</h5>
               <p><em>Pracownik produkcji i pakowania w firmie </em></p>
               <ul>
-                <li>Anglia | Lipiec - Sierpień, 2018</li>
+                <li>Anglia</li>
               </ul>
             </div>
             <div class="resume-item pb-0">
               <h4>InfoCentrum na Ostrowie Tumskim we
                 Wrocławiu</h4>
+                <h5>2019</h5>
               <p><em>Praktykant</em></p>
               <ul>
                 <li>Udzielanie informacji o historii, zabytkach, wydarzeniach, komunikacji miejskiej we Wrocławiu</li>
@@ -143,50 +143,37 @@
             </div>
             <div class="resume-item pb-0">
               <h4>Maginarium.pl</h4>
+              <h5>2021</h5>
               <p><em>Sprzedawca</em></p>
               <ul>
                 <li>Comic-Con, Poznań Games Arena i wielu pomniejszych wydarzeniach z tematyką fantasy & sci-fi</li>
                 <li>Sprzedaz gadzetów, koszulek, z klientami</li>
               </ul>
             </div>
-
+  
             <h3 class="resume-title">Edukacja</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Technikum nr 1 imienia
+                noblistów polskich w Zespole Szkół Ekonomicznych w
+                Starogardzie Gdańskim</h4>
+              <h5>IX.2015 - IV.2019</h5>
+              <p><em>Technik Obsługi Turystycznej</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Wyższa Szkoła Bankowa</h4>
+              <h5>IX.2020 - obecnie</h5>
+              <p><em>Turystyka i rekreacja</em></p>
+              <p>Specjalizacja - Hotelarstwo</p>
             </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Wolontariat</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>Wydarzenia w Europie</h4>
+              <h5>2016 - 2019</h5>
+              <p><em> Pyrkon | wolontariusz
+                Dbanie o porządek na miejscu wydarzenia, udzielanie
+                informacji uczestnikom, sprzedaż biletów, wykonywanie
+                zadań stacjonarnych i lotnych, przygotowanie stanowisk
+                dla wystawców</em></p>
             </div>
           </div>
         </div>
@@ -199,7 +186,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Kontakt</h2>
         </div>
 
         <div class="row mt-1">
@@ -221,7 +208,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p><a>508 059 718</a></p>
+                <p><a href="tel:+48508059718">508 059 718</a></p>
               </div>
 
             </div>
@@ -238,23 +225,19 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>Marcin Krause</h3>
+      <p>Social Media</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/marcin.krause.420" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/jedi_helper/" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy;<strong><span></span></strong> 2021
       </div>
       
     </div>
   </footer><!-- End Footer -->
 
-  <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
