Fixy tekstu, dodanie favicona

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>O mnie</h2>
-          <p>Od pięciu lat edukuję się w kierunku turystyki. Pracy wkontakcie z klientem nauczyłem się między innymi wpunktach informacji turystycznej, na wydarzeniachkulturalnych oraz targach. Żadna praca mi nie straszna!Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie zustawą z dnia 29.08.1997 r. o ochronie danych osobowych Dz. U. Nr 133 poz. 883 z późniejszymi zmianami).</p>
+          <p>Od pięciu lat edukuję się w kierunku turystyki. Pracy wkontakcie z klientem nauczyłem się między innymi w punktach informacji turystycznej, na wydarzeniach kulturalnych oraz targach. Żadna praca mi nie straszna!</p>
         </div>
 
         <div class="row">
@@ -95,14 +95,14 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Ukończony egzamin T.14 Prowadzenie
                     informacji turystycznej oraz sprzedaż usług
                     turystycznych</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Znajomość programu MS Office</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność łatwego nawiązywania kontaktu</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Komunikatywna znajomość języka
                     angielskiego</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność rozwiązywania konfliktów</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Podstawowa znajomość języka niemieckiego</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Znajomość programu KSI</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność pracy w zespole</strong></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Znajomość programu KSI</strong></li>                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Znajomość MS Office</strong></li>
                 </ul>
               </div>
             </div>
@@ -126,7 +126,7 @@
             <div class="resume-item pb-0">
               <h4>Pure Drive Fine Food</h4>
               <h5>2018</h5>
-              <p><em>Pracownik produkcji i pakowania w firmie </em></p>
+              <p><em>Pracownik produkcji i pakowania</em></p>
               <ul>
                 <li>Anglia</li>
               </ul>
@@ -147,7 +147,7 @@
               <p><em>Sprzedawca</em></p>
               <ul>
                 <li>Comic-Con, Poznań Games Arena i wielu pomniejszych wydarzeniach z tematyką fantasy & sci-fi</li>
-                <li>Sprzedaz gadzetów, koszulek, z klientami</li>
+                <li>Sprzedaz gadzetów, koszulek, kubków tematycznych</li>
               </ul>
             </div>
   
@@ -225,8 +225,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Marcin Krause</h3>
-      <p>Social Media</p>
+      <h3>Marcin Krause</h3>      
+      <p>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie zustawą z dnia 29.08.1997 r. o ochronie danych osobowych Dz. U. Nr 133 poz. 883 z późniejszymi zmianami).</p>
       <div class="social-links">
         <a href="https://www.facebook.com/marcin.krause.420" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/jedi_helper/" class="instagram"><i class="bx bxl-instagram"></i></a>
