zmiana tekstu w sekcji o mnie

--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i><strong>Ukończony egzamin T.13 Planowanie i
-                    realizacja imprez i usług turystycznych</strong> </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ukończony egzamin T.14 Prowadzenie
-                    informacji turystycznej oraz sprzedaż usług
+                  <li><i class="bi bi-chevron-right"></i><strong>Planowanie i
+                    realizacja imprez i usług turystycznych - Ukończony egzamin T.13</strong> </li>
+                  <li><i class="bi bi-chevron-right"></i> <strong> Prowadzenie
+                    informacji turystycznej oraz sprzedaż usług - Ukończony egzamin T.14
                     turystycznych</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność łatwego nawiązywania kontaktu</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Komunikatywna znajomość języka
                     angielskiego</strong></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność rozwiązywania konfliktów</strong></li>
+                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Podstawowa znajomość języka niemieckiego</strong></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność rozwiązywania konfliktów</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Umiejętność pracy w zespole</strong></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Znajomość programu KSI</strong></li>                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Znajomość MS Office</strong></li>
